--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
     <head>
         <title>Flash Cards</title>
         <!-- We've provided some styles for you, aren't we nice? -->
-        <link rel="stylesheet" type="text/css" href="reset.css" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="css/reset.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
-    <body ng-app="flashCards" ng-controller="MainController">
-    	<div
+    <body ng-app="flashCards">
+     <div ng-controller="StatsController" id="statistics">
+        <div id="scoreboard">
+            <h3>Correct: <span>{{ scores.correct }}</span></h3>
+            <h3>Incorrect: <span>{{ scores.incorrect }}</span></h3>
+        </div>
+    </div>
+    <div ng-controller="MainController">
+    	<button class = "category-button" ng-repeat = "category in categories" ng-click="getCategoryCards(category)" ng-class="{ active: currentCategory === category }">
+        {{ category }}
+        </button>
+        <div
     		ng-repeat="flashCard in flashCards | orderBy : 'question'"
     		class="flash-card">
     	    <h1>{{ flashCard.question | uppercase }}</h1>
@@ -25,8 +35,12 @@
     	        <span ng-show="!flashCard.answeredCorrectly">Nope, you got it wrong.</span>
     	    </h2>
     	</div>
-    	<script src="angular.js"></script>
-    	<script src="app.js"></script>
-    	<script src="main.controller.js"></script>
+    </div>
+	<script src="js/lib/angular.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/controllers/main.controller.js"></script>
+    <script src="js/controllers/stats.controller.js"></script>
+    <script src="js/factories/flashcards.factory.js"></script>
+    <script src="js/factories/score.factory.js"></script>
     </body>
 </html>
