--- a/index.html
+++ b/index.html
@@ -7,33 +7,21 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body ng-app="flashCards">
-     <div ng-controller="StatsController" id="statistics">
+    <div ng-controller="StatsController" id="statistics">
         <div id="scoreboard">
             <h3>Correct: <span>{{ scores.correct }}</span></h3>
             <h3>Incorrect: <span>{{ scores.incorrect }}</span></h3>
         </div>
     </div>
     <div ng-controller="MainController">
+        <loader ng-show="!flashCards"></loader>
     	<button class = "category-button" ng-repeat = "category in categories" ng-click="getCategoryCards(category)" ng-class="{ active: currentCategory === category }">
         {{ category }}
         </button>
         <div
     		ng-repeat="flashCard in flashCards | orderBy : 'question'"
     		class="flash-card">
-    	    <h1>{{ flashCard.question | uppercase }}</h1>
-    	    <ul class="flash-card-answers">
-    	    	<li
-    	    		ng-repeat="answer in flashCard.answers"
-    	    		class="flash-card-answer"
-    	    		ng-click="answerQuestion(answer, flashCard)">{{ answer.text }}</li>
-    	    </ul>
-    	    <h2
-    	    	class="answer-feedback"
-    	    	ng-class="flashCard.answeredCorrectly ? 'correct' : 'incorrect'"
-    	    	ng-show="flashCard.answered">
-    	        <span ng-show="flashCard.answeredCorrectly">Yeah, you got it right!</span>
-    	        <span ng-show="!flashCard.answeredCorrectly">Nope, you got it wrong.</span>
-    	    </h2>
+    	    <flash-card card="flashCard" border-on-hover></flash-card>
     	</div>
     </div>
 	<script src="js/lib/angular.js"></script>
@@ -42,5 +30,8 @@
     <script src="js/controllers/stats.controller.js"></script>
     <script src="js/factories/flashcards.factory.js"></script>
     <script src="js/factories/score.factory.js"></script>
+    <script src="js/directives/loader/loader.js"></script>
+    <script src="js/directives/flashCard/flashCard.js"></script>
+    <script src="js/directives/borderOnHover/borderOnHover.js"></script>
     </body>
 </html>
